fix(high-contrast): scrollbar color, remove commented code

--- a/src/_high-contrast.less
+++ b/src/_high-contrast.less
@@ -15,7 +15,6 @@
 @fade9: 100%;
 
 @bg-read: @color-fade1;
-// @color-panel-bg: @color-fade1;
 @color-icon: @color-fade5;
 @color-feeds-icon: @color-fade5;
 @border-default: @color-fade7;
@@ -30,7 +29,6 @@
 body.flat {
   &.flat ::-webkit-scrollbar-thumb {
     background-color: @color-accent;
-    background-color: lightblue;
   }
   :is(#main, .post .header) {
     background-color: @default-bg !important;
